Add JVM args that enable class unloading
+review REVIEW-5835